--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="page-header">
-      <div class="page-header__container">
+    <header class="header">
+      <div class="header__container">
         <nav class="site-nav">
           <a class="site-nav__item site-nav__item--active" href="./index.html"
             >About</a
