refactor: rename css classes

--- a/index.html
+++ b/index.html
@@ -75,23 +75,23 @@
         </div>
       </section>
 
-      <section class="service">
-        <div class="service__container">
-          <h2 class="service__title">Rappresent your idea with a smart Design</h2>
-          <p class="service__text">
+      <section class="rappresent">
+        <div class="rappresent__container">
+          <h2 class="rappresent__title">Rappresent your idea with a smart Design</h2>
+          <p class="rappresent__text">
             Tasks accompanying and related to programming include: testing,
             debugging, source code maintenance, implementation of build systems,
             and management of derived artifacts, such as the machine code of
             computer programs.
           </p>
-          <button class="service__button">get started</button>
+          <button class="rappresent__button">get started</button>
         </div>
       </section>
 
-      <section class="team">
-        <div class="team__container">
-          <h2 class="team__title">our community</h2>
-          <p class="team__text">
+      <section class="our-community">
+        <div class="our-community__container">
+          <h2 class="our-community__title">our community</h2>
+          <p class="our-community__text">
             A hacker is any skilled computer expert that uses their technical
             knowledge to overcome a problem, but it can also mean a security
             hacker in common language
@@ -99,15 +99,15 @@
         </div>
       </section>
 
-      <section class="feature">
-        <div class="feature__container">
-          <h2 class="feature__title">Implement right Code</h2>
-          <p class="feature__text">
+      <section class="implement">
+        <div class="implement__container">
+          <h2 class="implement__title">Implement right Code</h2>
+          <p class="implement__text">
             These might be considered part of the programming process, but often
             the term software development is used for this larger process with
             the term programming, implementation
           </p>
-          <button class="feature__button">Learn more</button>
+          <button class="implement__button">Learn more</button>
         </div>
       </section>
 
