--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
             </h2>
             <p class="rappresent__text">
               Tasks accompanying and related to programming include: testing,
-              debugging, source code maintenance, <b class="rappresent__text--bold">implementation of build
-              systems</b>, and management of derived artifacts, such as the machine
-              code of computer programs.
+              debugging, source code maintenance,
+              <b class="rappresent__text--bold"
+                >implementation of build systems</b
+              >, and management of derived artifacts, such as the machine code
+              of computer programs.
             </p>
             <button class="rappresent__button">get started</button>
           </div>
@@ -109,6 +111,12 @@
 
       <section class="our-community">
         <div class="our-community__container">
+          <img
+            src="./img/our-community/userpic.jpg"
+            alt="Our community"
+            width="45px"
+            height="45px"
+          />
           <h2 class="our-community__title">our community</h2>
           <p class="our-community__text">
             A hacker is any skilled computer expert that uses their technical
