--- a/index.html
+++ b/index.html
@@ -190,6 +190,34 @@
           </form>
         </div>
       </section>
+
+      <section class="download">
+        <div class="download__container">
+          <h2 class="download__title">Download the App</h2>
+          <p class="download__text">
+            Machine code was the language of early programs, written in the
+            instruction set of the particular machine, often in binary notation.
+          </p>
+          <div class="download__buttons">
+            <div class="download__button">
+              <button class="download__btn">apple store</button>
+              <div class="download__icon">
+                <svg width="17" height="20">
+                  <use href="./img/sprite.svg#icon-apple"></use>
+                </svg>
+              </div>
+            </div>
+            <div class="download__button">
+              <button class="download__btn">Play Market</button>
+              <div class="download__icon">
+                <svg width="19" height="22">
+                  <use href="./img/sprite.svg#icon-android"></use>
+                </svg>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
