--- a/index.html
+++ b/index.html
@@ -219,5 +219,29 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer__container">
+        <nav class="footer__nav">
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="#" class="footer__link">Credits</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Privacy</a>
+            </li>
+            <li class="footer__item">
+              <a href="#" class="footer__link">Our teams</a>
+            </li>
+          </ul>
+        </nav>
+        <a href="#" aria-label="logo company" class="logo">
+          <svg width="44" height="45">
+            <use href="./img/sprite.svg#icon-logo"></use>
+          </svg>
+        </a>
+        <p class="footer__copy">by TonYem for RSS at 2020</p>
+      </div>
+    </footer>
   </body>
 </html>
